--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
-language: ruby
 rvm:
   - 2.2
-  - jruby
-script:
-  - echo "ahjhj"
+  - 2.3
+
+env:
+  - FOO=foo
+  - FOO=bar
+
+script: echo $FOO
+
+jobs:
+  include:
+    - stage: deploy
+      script: echo Deploy
+      # Keep in mind to overwrite these here
+      rvm: 2.3
+      env: FOO=foo
