--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ script:
 jobs:
   include:
     - script:
-      - echo $FOO
-      - echo $BAZ
+      - echo $FOO $BAZ
       - gem --version
     - stage: deploy
       script:
