--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,26 @@ php:
   - '5.6'
 script:
   - php --version
+env:
+  - bar=10
+  - bar=20
 
 jobs:
   include:
-    - {}
     - language: python
       python: 3.8
       script:
       - python -c "print('Hi from Python!')"
+      - echo $bar
 
     - language: node_js
       node_js: 12
       script:
       - node -e "console.log('Hi from NodeJS!')"
+      - echo $bar
 
     - language: java
       jdk: openjdk8
       script:
       - javac -help
+      - echo $bar
