--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ jobs:
     - DEPLOY_S3_OPTIONS="--delete"
     script:
     - echo "DEPLOY CODE TO PRIVATE S3 BUCKET DEV"
-    - ". ./travis_ci/deploy_s3/sync_code_s3.sh"
+    # - ". ./travis_ci/deploy_s3/sync_code_s3.sh"
     # deploy:
     #   provider: s3
     #   access_key_id: $AWS_ACCESS_KEY_ID
@@ -59,7 +59,7 @@ jobs:
     - DEPLOY_S3_OPTIONS="--delete"
     script:
     - echo "DEPLOY CODE TO PRIVATE S3 BUCKET STG"
-    - ". ./travis_ci/deploy_s3/sync_code_s3.sh"
+    # - ". ./travis_ci/deploy_s3/sync_code_s3.sh"
     # deploy:
     #   provider: s3
     #   access_key_id: $AWS_ACCESS_KEY_ID
